force-app/main/default/objects/BGR__c/BGR__c.object-meta.xml
<CustomObject>
    <label>BGR</label>
    <nameField>
        <displayFormat>BGR-{0000}</displayFormat>
        <label>Blanket Gas Regulator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BGR</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>