force-app/main/default/objects/BGR__c/fields/Assembly_Price__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Price__c</fullName>
    <label>Assembly Price</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>