force-app/main/default/objects/BGR__c/fields/ASSYPARTNOBASE__c.field-meta.xml
<CustomField>
    <fullName>ASSYPARTNOBASE__c</fullName>
    <label>ASSYPARTNOBASE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>