force-app/main/default/objects/BGR__c/fields/Atmospheric_Pressure_Units__c.field-meta.xml
<CustomField>
    <fullName>Atmospheric_Pressure_Units__c</fullName>
    <label>Atmospheric Pressure Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pressure_Units</valueSetName>
    </valueSet>
</CustomField>