force-app/main/default/objects/BGR__c/fields/Body_Material__c.field-meta.xml
<CustomField>
    <fullName>Body_Material__c</fullName>
    <label>Body Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>316 SS</label>
            </value>
            <value>
                <fullName>Aluminium</fullName>
                <isActive>false</isActive>
                <label>Aluminium</label>
            </value>
            <value>
                <fullName>Metal</fullName>
                <isActive>false</isActive>
                <label>Metal</label>
            </value>
            <value>
                <fullName>Steel</fullName>
                <isActive>false</isActive>
                <label>Steel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>