force-app/main/default/objects/BGR__c/fields/Body_Material_dynamic__c.field-meta.xml
<CustomField>
    <fullName>Body_Material_dynamic__c</fullName>
    <label>Body Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>