force-app/main/default/objects/BGR__c/fields/Bypass__c.field-meta.xml
<CustomField>
    <fullName>Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>