force-app/main/default/objects/BGR__c/fields/Combo_Orifice_Setting__c.field-meta.xml
<CustomField>
    <fullName>Combo_Orifice_Setting__c</fullName>
    <label>Orifice Setting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>