force-app/main/default/objects/BGR__c/fields/Compressibility_Factor__c.field-meta.xml
<CustomField>
    <fullName>Compressibility_Factor__c</fullName>
    <label>Compressibility Factor</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>