force-app/main/default/objects/BGR__c/fields/Configuration_Complete__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configuration_Complete</label>
    <type>Checkbox</type>
</CustomField>