force-app/main/default/objects/BGR__c/fields/Connection__c.field-meta.xml
<CustomField>
    <fullName>Connection__c</fullName>
    <description>DO NOT CHANGE THE &quot;API&quot; NAMES FOR THE PICKLIST VALUES</description>
    <label>Connection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Size__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>o</fullName>
                <label>1/2&quot; FNPT</label>
            </value>
            <value>
                <fullName>e</fullName>
                <label>1/2&quot; 150# ANSI RF Flange</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>1&quot; 150# ANSI RF Flange on 1/2&quot; Valve</label>
            </value>
            <value>
                <fullName>f</fullName>
                <label>DN 15 (1/2&quot;) PN 10/16 DIN RF Flange</label>
            </value>
            <value>
                <fullName>g</fullName>
                <label>DN 25 (1&quot;) PN 10/16 DIN RF on 1/2&quot; Valve</label>
            </value>
            <value>
                <fullName>s</fullName>
                <label>1/2&quot; Sanitary Connections</label>
            </value>
            <value>
                <fullName>q</fullName>
                <label>1/2&quot; Quick Couplings</label>
            </value>
            <value>
                <fullName>n</fullName>
                <label>1&quot; FNPT</label>
            </value>
            <value>
                <fullName>a</fullName>
                <label>1&quot; 150# ANSI RF Flange</label>
            </value>
            <value>
                <fullName>t</fullName>
                <label>2&quot; 150# ANSI RF Flange on 1&quot; Valve</label>
            </value>
            <value>
                <fullName>c</fullName>
                <label>DN 25 (1&quot;) PN 10/16 DIN RF Flange</label>
            </value>
            <value>
                <fullName>b</fullName>
                <label>DN 50 (2&quot;) PN 10/16 DIN RF on 1&quot; Valve</label>
            </value>
            <value>
                <fullName>r</fullName>
                <label>1&quot; Sanitary Connections</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>