force-app/main/default/objects/BGR__c/fields/Connection_dynamic__c.field-meta.xml
<CustomField>
    <fullName>Connection_dynamic__c</fullName>
    <label>Connection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>