force-app/main/default/objects/BGR__c/fields/Converted_Flow_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Converted_Flow_Capacity__c</fullName>
    <label>Converted Flow Capacity</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>