force-app/main/default/objects/BGR__c/fields/Converted_Setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_Setting__c</fullName>
    <label>Converted Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>