force-app/main/default/objects/BGR__c/fields/Converted_Supply_Gas_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Converted_Supply_Gas_Temperature__c</fullName>
    <label>Converted Supply Gas Temperature</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>