force-app/main/default/objects/BGR__c/fields/Converted_Supply_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Converted_Supply_Pressure__c</fullName>
    <label>Converted Supply Pressure</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>