force-app/main/default/objects/BGR__c/fields/Document_Or_Sourcing_flag__c.field-meta.xml
<CustomField>
    <fullName>Document_Or_Sourcing_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Or Sourcing flag</label>
    <type>Checkbox</type>
</CustomField>