force-app/main/default/objects/BGR__c/fields/Engineering_Override__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Override</label>
    <type>Checkbox</type>
</CustomField>