force-app/main/default/objects/BGR__c/fields/Flow_Rate_units__c.field-meta.xml
<CustomField>
    <fullName>Flow_Rate_units__c</fullName>
    <label>Flow Rate Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Imperial) gallon/h</fullName>
            </value>
            <value>
                <fullName>(Imperial) gallon/min</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/h</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/min</fullName>
            </value>
            <value>
                <fullName>barrel/h</fullName>
            </value>
            <value>
                <fullName>ft3/h</fullName>
            </value>
            <value>
                <fullName>ft3/min</fullName>
            </value>
            <value>
                <fullName>kg/h</fullName>
            </value>
            <value>
                <fullName>kg/min</fullName>
            </value>
            <value>
                <fullName>L/h</fullName>
            </value>
            <value>
                <fullName>L/min</fullName>
            </value>
            <value>
                <fullName>lb/h</fullName>
            </value>
            <value>
                <fullName>lb/min</fullName>
            </value>
            <value>
                <fullName>m3/h</fullName>
            </value>
            <value>
                <fullName>m3/min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>