force-app/main/default/objects/BGR__c/fields/GOST_CU_Tr_010_2011__c.field-meta.xml
<CustomField>
    <fullName>GOST_CU_Tr_010_2011__c</fullName>
    <label>CUTR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>