force-app/main/default/objects/BGR__c/fields/Lead_Time_Adder__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Adder__c</fullName>
    <label>Lead Time Adder</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>