force-app/main/default/objects/BGR__c/fields/List_Price_Each__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Each__c</fullName>
    <label>List Price Each</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>