force-app/main/default/objects/BGR__c/fields/Material_Sourcing_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Material_Sourcing_Requirements__c</fullName>
    <label>Material Sourcing Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
                <default>true</default>
                <label>No Restrictions</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <label>Yes, Details Attached to Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>