force-app/main/default/objects/BGR__c/fields/Minimum_Required_Flow_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Required_Flow_Capacity__c</fullName>
    <label>Minimum Required Flow Capacity</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>