force-app/main/default/objects/BGR__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3011L</fullName>
            </value>
            <value>
                <fullName>3011H</fullName>
            </value>
            <value>
                <fullName>3011HP</fullName>
            </value>
            <value>
                <fullName>3020A</fullName>
            </value>
            <value>
                <fullName>3041L</fullName>
            </value>
            <value>
                <fullName>3041H</fullName>
            </value>
            <value>
                <fullName>3041HP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>