force-app/main/default/objects/BGR__c/fields/Narrow_selection_on_flow_requirements__c.field-meta.xml
<CustomField>
    <fullName>Narrow_selection_on_flow_requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Narrow selection on flow requirements?</label>
    <type>Checkbox</type>
</CustomField>