force-app/main/default/objects/BGR__c/fields/Non_Discountable_Price__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Non-Discountable Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>