force-app/main/default/objects/BGR__c/fields/OA__c.field-meta.xml
<CustomField>
    <fullName>OA__c</fullName>
    <label>OA</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>