force-app/main/default/objects/BGR__c/fields/OB115__c.field-meta.xml
<CustomField>
    <fullName>OB115__c</fullName>
    <label>OB115</label>
    <length>255</length>
    <type>Text</type>
</CustomField>