force-app/main/default/objects/BGR__c/fields/OB320__c.field-meta.xml
<CustomField>
    <fullName>OB320__c</fullName>
    <label>OB320</label>
    <length>255</length>
    <type>Text</type>
</CustomField>