force-app/main/default/objects/BGR__c/fields/Orifice_Setting__c.field-meta.xml
<CustomField>
    <fullName>Orifice_Setting__c</fullName>
    <label>Orifice Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-100%</fullName>
            </value>
            <value>
                <fullName>2-75%</fullName>
            </value>
            <value>
                <fullName>3-50%</fullName>
            </value>
            <value>
                <fullName>4-25%</fullName>
            </value>
            <value>
                <fullName>5-20%</fullName>
            </value>
            <value>
                <fullName>6-15%</fullName>
            </value>
            <value>
                <fullName>7-10%</fullName>
            </value>
            <value>
                <fullName>8-5%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>