force-app/main/default/objects/BGR__c/fields/Orifice_value__c.field-meta.xml
<CustomField>
    <fullName>Orifice_value__c</fullName>
    <label>Orifice value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>