force-app/main/default/objects/BGR__c/fields/OW410__c.field-meta.xml
<CustomField>
    <fullName>OW410__c</fullName>
    <label>OW410</label>
    <length>255</length>
    <type>Text</type>
</CustomField>