force-app/main/default/objects/BGR__c/fields/OW610__c.field-meta.xml
<CustomField>
    <fullName>OW610__c</fullName>
    <label>OW610</label>
    <length>100</length>
    <type>Text</type>
</CustomField>