force-app/main/default/objects/BGR__c/fields/Product_material_options_flag__c.field-meta.xml
<CustomField>
    <fullName>Product_material_options_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product material options flag</label>
    <type>Checkbox</type>
</CustomField>