force-app/main/default/objects/BGR__c/fields/Radiography__c.field-meta.xml
<CustomField>
    <fullName>Radiography__c</fullName>
    <label>Radiography</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
                <label>Critical Areas of Cast Components</label>
            </value>
            <value>
                <fullName>ALL</fullName>
                <label>All Surface Areas of Cast Components</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>