force-app/main/default/objects/BGR__c/fields/Relief_flag__c.field-meta.xml
<CustomField>
    <fullName>Relief_flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Relief flag</label>
    <type>Checkbox</type>
</CustomField>