force-app/main/default/objects/BGR__c/fields/Schedule_2__c.field-meta.xml
<CustomField>
    <fullName>Schedule_2__c</fullName>
    <label>Schedule 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>