force-app/main/default/objects/BGR__c/fields/Section_B_flag__c.field-meta.xml
<CustomField>
    <fullName>Section_B_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section B flag</label>
    <type>Checkbox</type>
</CustomField>