force-app/main/default/objects/BGR__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>