force-app/main/default/objects/BGR__c/fields/Setting_Units__c.field-meta.xml
<CustomField>
    <fullName>Setting_Units__c</fullName>
    <label>Setting Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>psig</fullName>
            </value>
            <value>
                <fullName>barg</fullName>
            </value>
            <value>
                <fullName>kgf/cm2</fullName>
            </value>
            <value>
                <fullName>in. water</fullName>
            </value>
            <value>
                <fullName>osig</fullName>
            </value>
            <value>
                <fullName>mbarg</fullName>
            </value>
            <value>
                <fullName>mm water</fullName>
            </value>
            <value>
                <fullName>in. Hg</fullName>
            </value>
            <value>
                <fullName>mm Hg</fullName>
            </value>
            <value>
                <fullName>gf/cm2</fullName>
            </value>
            <value>
                <fullName>Pa</fullName>
            </value>
            <value>
                <fullName>kPa</fullName>
            </value>
            <value>
                <fullName>MPa</fullName>
            </value>
            <value>
                <fullName>torr</fullName>
            </value>
            <value>
                <fullName>atmg</fullName>
            </value>
            <value>
                <fullName>bard</fullName>
            </value>
            <value>
                <fullName>psid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>