force-app/main/default/objects/BGR__c/fields/Shell_test__c.field-meta.xml
<CustomField>
    <fullName>Shell_test__c</fullName>
    <label>Shell Test - Actuator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIR</fullName>
                <label>Pneumatic</label>
            </value>
            <value>
                <fullName>HYDRO</fullName>
                <label>Hydraulic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>