force-app/main/default/objects/BGR__c/fields/Size_Backend__c.field-meta.xml
<CustomField>
    <fullName>Size_Backend__c</fullName>
    <label>Size Backend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>