force-app/main/default/objects/BGR__c/fields/Soft_Goods_Material__c.field-meta.xml
<CustomField>
    <fullName>Soft_Goods_Material__c</fullName>
    <label>Soft Goods Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>b</fullName>
                <label>Buna-N O-Rings w/ Fluoropolymer Diaphragm</label>
            </value>
            <value>
                <fullName>c</fullName>
                <label>Chemraz(R) O-Rings w/ Fluoropolymer Diaphragm</label>
            </value>
            <value>
                <fullName>e</fullName>
                <label>EPDM O-Rings w/ Fluoropolymer Diaphragm</label>
            </value>
            <value>
                <fullName>v</fullName>
                <label>FKM O-Rings w/ Fluoropolymer Diaphragm</label>
            </value>
            <value>
                <fullName>s</fullName>
                <isActive>false</isActive>
                <label>Special</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>