force-app/main/default/objects/BGR__c/fields/Soft_Goods_Material_dynamic__c.field-meta.xml
<CustomField>
    <fullName>Soft_Goods_Material_dynamic__c</fullName>
    <label>Soft Goods Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>