force-app/main/default/objects/BGR__c/fields/SPRINGCODE__c.field-meta.xml
<CustomField>
    <fullName>SPRINGCODE__c</fullName>
    <label>SPRINGCODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>