force-app/main/default/objects/BGR__c/fields/Supply_Gas__c.field-meta.xml
<CustomField>
    <fullName>Supply_Gas__c</fullName>
    <label>Supply Gas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Specified</fullName>
            </value>
            <value>
                <fullName>Carbon Dioxide</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Nitrogen</fullName>
            </value>
            <value>
                <fullName>Methane</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>