force-app/main/default/objects/BGR__c/fields/Supply_Gas_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Supply_Gas_Temperature__c</fullName>
    <label>Supply Gas Temperature</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>